// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInputWithUnit /> by default matches with snapshot 1`] = `
<div
  className="sc-dkzDqf iLfyAH k-Form-TextInputWithUnit"
>
  <input
    className="sc-bczRLJ etIXKI k-Form-TextInput k-Form-TextInputWithUnit__input k-Form-TextInput--medium"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="k-Form-TextInputWithUnit__unit k-Form-TextInputWithUnit__unit--medium"
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with disabled prop matches with snapshot 1`] = `
<div
  className="sc-dkzDqf iLfyAH k-Form-TextInputWithUnit"
>
  <input
    className="sc-bczRLJ etIXKI k-Form-TextInput k-Form-TextInputWithUnit__input k-Form-TextInput--medium k-Form-TextInput--disabled"
    disabled={true}
    name="text"
    type="number"
  />
  <span
    className="k-Form-TextInputWithUnit__unit k-Form-TextInputWithUnit__unit--medium k-Form-TextInputWithUnit__unit--disabled"
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with error prop matches with snapshot 1`] = `
<div
  className="sc-dkzDqf iLfyAH k-Form-TextInputWithUnit"
>
  <input
    className="sc-bczRLJ etIXKI k-Form-TextInput k-Form-TextInputWithUnit__input k-Form-TextInput--medium k-Form-TextInput--error"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="k-Form-TextInputWithUnit__unit k-Form-TextInputWithUnit__unit--medium k-Form-TextInputWithUnit__unit--error"
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with size prop matches with snapshot 1`] = `
<div
  className="sc-dkzDqf iLfyAH k-Form-TextInputWithUnit"
>
  <input
    className="sc-bczRLJ etIXKI k-Form-TextInput k-Form-TextInputWithUnit__input k-Form-TextInput--large"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="k-Form-TextInputWithUnit__unit k-Form-TextInputWithUnit__unit--large"
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with unit matches with snapshot 1`] = `
<div
  className="sc-dkzDqf iLfyAH k-Form-TextInputWithUnit"
>
  <input
    className="sc-bczRLJ etIXKI k-Form-TextInput k-Form-TextInputWithUnit__input k-Form-TextInput--medium"
    disabled={false}
    name="text"
    type="number"
  >
    €
  </input>
  <span
    className="k-Form-TextInputWithUnit__unit k-Form-TextInputWithUnit__unit--medium"
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with valid prop matches with snapshot 1`] = `
<div
  className="sc-dkzDqf iLfyAH k-Form-TextInputWithUnit"
>
  <input
    className="sc-bczRLJ etIXKI k-Form-TextInput k-Form-TextInputWithUnit__input k-Form-TextInput--medium k-Form-TextInput--valid"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="k-Form-TextInputWithUnit__unit k-Form-TextInputWithUnit__unit--medium k-Form-TextInputWithUnit__unit--valid"
  >
    λ
  </span>
</div>
`;
